[gd_scene load_steps=11 format=2]

[ext_resource path="res://entity/enemy/grunter.gd" type="Script" id=1]
[ext_resource path="res://addons/knightv4.glb" type="PackedScene" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.5

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.25
bottom_radius = 0.25

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, -24, 0 )
initial_velocity = 8.0
initial_velocity_random = 0.5

[sub_resource type="SpatialMaterial" id=4]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.5, 0.5 )

[sub_resource type="ParticlesMaterial" id=6]
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, -24, 0 )
initial_velocity = 8.0
initial_velocity_random = 0.5
angle = 720.0
angle_random = 1.0

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.65098, 0, 0, 1 )

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 0.2, 0.4, 0.2 )

[node name="Grunter" type="KinematicBody"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="knightv4" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="Particles2" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="CorpseTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.8
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="timeout" from="CorpseTimer" to="." method="_on_CorpseTimer_timeout"]
